--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,100&family=Rajdhani:wght@300&family=Shalimar&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Island+Moments&family=Orbitron&family=Poor+Story&family=Rajdhani:wght@300&family=Satisfy&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
